--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "validation-form",
+  "name": "pxblue-form-validation-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@pxblue/colors": "^1.0.13",
+    "@pxblue/themes": "1.0.25",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typeface-open-sans": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
