--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/@pxblue/themes/angular/theme.scss"
+              "./node_modules/@pxblue/themes/angular/theme.scss",
+              "./node_modules/typeface-open-sans"
             ],
             "scripts": []
           },
@@ -90,7 +91,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/@pxblue/themes/angular/theme.scss"
+              "./node_modules/@pxblue/themes/angular/theme.scss",
+              "./node_modules/typeface-open-sans"
             ],
             "scripts": []
           }
