--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@pxblue/colors": "^1.0.13",
     "@pxblue/themes": "^2.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "typeface-open-sans": "^0.0.54",
+    "typeface-open-sans": "^0.0.75",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
